--- a/package.json
+++ b/package.json
@@ -5,24 +5,24 @@
   "private": false,
   "main": "dist/index.js",
   "dependencies": {
-    "@fortawesome/react-fontawesome": "^0.1.3",
-    "@material-ui/core": "3.1.0",
+    "@fortawesome/react-fontawesome": "0.1.3",
+    "@material-ui/core": "3.6.1",
     "@material-ui/icons": "3.0.1",
-    "@types/googlemaps": "3.30.13",
+    "@types/googlemaps": "3.30.16",
     "@types/markerclustererplus": "2.1.33",
-    "ajv": "^5.0.0",
-    "chartist": "0.10.1",
+    "ajv": "6.6.1",
+    "chartist": "0.11.0",
     "classnames": "2.2.6",
     "npm-run-all": "4.1.5",
     "perfect-scrollbar": "1.4.0",
-    "react": "16.5.2",
+    "react": "16.6.3",
     "react-chartist": "0.13.1",
-    "react-dom": "16.5.2",
+    "react-dom": "16.6.3",
     "react-google-maps": "9.4.5",
-    "react-iframe": "^1.3.3",
+    "react-iframe": "1.3.3",
     "react-router-dom": "4.3.1",
-    "react-scripts": "1.1.5",
-    "react-swipeable-views": "0.12.17"
+    "react-scripts": "2.1.1",
+    "react-swipeable-views": "0.13.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -60,5 +60,11 @@
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-plugin-transform-react-jsx": "6.24.1",
     "babel-preset-es2015": "6.24.1"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
