--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
     "lint:check": "eslint . --ext=js,jsx;  exit 0",
     "lint:fix": "eslint . --ext=js,jsx --fix;  exit 0",
-    "build-package": "babel src --out-dir dist"
+    "build-package": "babel src --out-dir dist",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -55,11 +57,12 @@
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
-    "babel-plugin-module-resolver": "3.1.1",
     "babel-plugin-import-rename": "1.0.1",
+    "babel-plugin-module-resolver": "3.1.1",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-plugin-transform-react-jsx": "6.24.1",
-    "babel-preset-es2015": "6.24.1"
+    "babel-preset-es2015": "6.24.1",
+    "webpack": "^4.3.0"
   },
   "browserslist": [
     ">0.2%",
