--- a/netlify.toml
+++ b/netlify.toml
@@ -1,1 +1,9 @@
-/*    /build/index.html   200
+[build]
+  command = "npm run build"
+  publish = "build"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+  force = true
