--- a/package.json
+++ b/package.json
@@ -32,9 +32,7 @@
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
     "lint:check": "eslint . --ext=js,jsx;  exit 0",
     "lint:fix": "eslint . --ext=js,jsx --fix;  exit 0",
-    "build-package": "babel src --out-dir dist",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "build-package": "babel src --out-dir dist"
   },
   "repository": {
     "type": "git",
